# Novel_electron

./: .env  .eslintrc.js  .gitignore  ELECTRON_REFACTORING_GUIDE.md  LOOP6_IMPROVEMENT_ANALYSIS.md  README.md  SESSION_DATA_ARCHIVE.md  copilot.json  copilot_backup.json  debug-memory.html  eslint.config.js  memory-monitor-test.html  memory-optimization-report.json  next.config.ts  package-lock.json  package.json  postcss.config.js  tailwind.config.js  test-page.html  tsconfig.json  tsconfig.main.json  tsconfig.main.tsbuildinfo  tsconfig.tsbuildinfo  현재상황.md
.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  trace
backup/: main-backup.d.ts  main-backup.d.ts.map  main-backup.js  main-backup.js.map  main-original.ts  native-ipc.ts
native-modules/: Cargo.toml  build.rs  index.d.ts  index.js  package.json  typing-stats-native.darwin-arm64.node.backup  typing-stats-native.darwin-arm64.node.backup.1750159070309
native-modules/src/: gpu.rs  lib.rs  memory.rs  utils.rs  worker.rs
native-modules/src/gpu/: detection.rs  memory.rs  optimization.rs
prisma/: dev.db  schema.prisma
public/: manifest.json
scripts/: copy-native.js  fix-eslint-errors.sh  reverse_translate_comments.py  test-api-consistency.js  test-gpu-acceleration.js  test-integration-complete.js  test-memory-optimization.js  test-memory-rss-calculation.js  test-native-integration.js  test-native-module-status.js  test-safety.js  test-settings-ipc.js  (+1 more)
(+547 files in other folders)
