[package]
name = "typing-stats-native"
version = "0.1.0"
edition = "2021"
description = "Native modules for Loop 6 typing statistics app"
authors = ["Loop Team <team@loop.com>"]
license = "MIT"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.12.2", features = ["napi4", "tokio_rt"] }
napi-derive = "2.12.2"
once_cell = "1.17.1"
parking_lot = "0.12.1"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["full"] }
wgpu = { version = "0.17.0", features = ["serde"] }
async-std = "1.12.0"
bytemuck = { version = "1.14.0", features = ["derive"] }
libc = "0.2.144"
num_cpus = "1.16.0"
rustc_version_runtime = "0.2.1"
env_logger = "0.10.0"
log = "0.4.17"
rayon = "1.7.0"
pollster = "0.3.0"
chrono = "0.4.24"
md5 = "0.7.0"
sha2 = "0.10.0"
lazy_static = "1.4.0"
anyhow = "1.0.97"
base64 = "0.21"
uuid = { version = "1.0", features = ["v4"] }
hostname = "0.3"
sysinfo = "0.35.2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["processthreadsapi", "psapi", "memoryapi"] }

[target.'cfg(target_os = "macos")'.dependencies]
mach2 = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.15.1"

[build-dependencies]
napi-build = "2.0.1"

[features]
default = ["gpu-compute", "memory-optimization", "worker-threads"]
gpu-compute = []
memory-optimization = []
worker-threads = []
advanced-analytics = []
use-winapi = []
